@@ -1,7 +1,18 @@
+@use '../../vendors/fortawesome-fontawesome/mixins' as fa;
+
 .participant {
   // Mode order is significant
+
+  &.has-mode-bot i:before,
+  &.has-mode-service_bot i:before {
+    @include fa.icon(robot, solid);
+    color: #777;
+  }
+
   &.has-mode-voice span:before { content: '+'; }
+  &.has-mode-half_operator span:before { content: '%'; }
   &.has-mode-operator span:before { content: '@'; }
+  &.has-mode-admin span:before { content: '&'; }
 
   i {
     width: 1.2em;
