@@ -4,6 +4,7 @@ Revision history for perl distribution Convos
  - Bumped required Perl to 5.20
  - Changed to using async/await in the Perl code
  - Changed "raw messages" to a persistent setting
+ - Add styling for more user modes: "admin", "bot" and "half operator"
  - Replaced backend.user helper to user.load_p
  - Brought back Convos::Plugin::Paste to simplify overriding multiline message handling
  - Fix not hiding the sidebar settings when scrolling up #689
